Update the Groovy plug-in to 2.5.8
#933